re PR target/24934 (profilebootstrap failure)

PR target/24934
* opts.c (decode_options): Turn off partitioning if flag_unwind_tables
is set.

From-SVN: r108103